fix z-index

--- a/assets/Book-slideshow.css
+++ b/assets/Book-slideshow.css
@@ -10,7 +10,7 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-	position: relative;
+  position: relative;
 }
 
 .flipbook {
@@ -183,6 +183,7 @@
     align-items: center;
     margin-top: 20px;
     gap: 10px;
+    z-index: 1;
   }
 
   .slider-button {
@@ -203,17 +204,17 @@
     background-color: #333333;
   }
 
-	.book-flipbook-body::before {
-		content: '';
-		position: absolute;
-		height: 100%;
-		width: 100%;
-		background-image: url("https://cdn.shopify.com/s/files/1/0669/3670/1123/files/pexels-rachel-claire-5864245.jpg?v=1729513551");
-		background-size: cover;
-		background-position: center;
-		background-repeat: no-repeat;
-		filter: blur(10px);
-	}
+  .book-flipbook-body::before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-image: url("https://cdn.shopify.com/s/files/1/0669/3670/1123/files/pexels-rachel-claire-5864245.jpg?v=1729513551");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    filter: blur(10px);
+  }
 }
 
 /* Media query for tablets */
